# tashif.codes

./: package.json  tailwind.config.js  vercel.json
api/: config.py  index.py  main.py  models.py  pyproject.toml
api/core/: config.py  dependencies.py
api/routers/: __init__.py  analytics.py
api/services/: __init__.py  client.py  cloudflare.py  merger.py  posthog.py  vercel.py
api/utils/: __init__.py
src/components/: BlogCard.astro  BlogFilters.tsx  GitHubContributionGraph.astro  GitHubStats.astro  InteractiveResume.tsx  MarkdownRenderer.astro  ProfileDropdown.tsx  ProjectCard.astro  ProjectFilters.tsx  ProjectStatsDashboard.tsx  Resume.astro  ThemeToggle.tsx  YearSelect.tsx
src/components/docs/: TableOfContents.astro
src/components/ui/: animated-tooltip.tsx  card.tsx
src/data/: github.ts
src/data/docs/: MIGRATION_GUIDE.md  README.md
src/data/docs/agentic-browser/: Configuration Management.md  Deployment and Operations.md  Development Guidelines.md  Getting Started.md  INDEX.md  MCP Server.md  Project Overview.md  Security Considerations.md  Testing Strategy.md  Troubleshooting and FAQ.md
src/data/docs/bulk-messaging-system/: Build and Deployment.md  Development Guidelines.md  Frontend User Interface.md  Getting Started.md  Project Overview.md  Troubleshooting Guide.md
src/layouts/: Layout.astro
src/pages/: 404.astro  github.astro  index.astro  leetcode.astro  resume.astro
src/pages/projects/: [slug].astro  index.astro  stats.astro
src/styles/: global.css
src/types/: markdown-it-task-lists.d.ts
src/utils/: docs.ts
(+338 files in other folders)
